
[package]
name = "symbiants_pkg"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "symbiants_lib"
crate-type = ["cdylib", "rlib"]

[workspace]
resolver = "2"
members = ["rendering", "simulation", "ui"]

[build-dependencies]
fs_extra = "1.2"

[dependencies]
simulation = { path = "./simulation" }
rendering = { path = "./rendering" }
ui = { path = "./ui" }

bevy = { version = "0.12.1", default-features = false, features = [
  "bevy_asset",
  "bevy_scene",
  "bevy_winit",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_sprite",
  "bevy_text",
  "default_font",
  "png",
] }
bevy_turborand = { version = "0.7.0" }

# WASM builds require extra dependencies for logging and persisting state to local storage.
# WASM builds do not require x11 and cannot use dynamic_linking.
[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = { version = "0.1.7" }

# Linux builds require x11 or wayland for display.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy = { version = "0.12.1", default-features = false, features = [
  "x11",
  # TODO: support wayland w/ hardware accelerated GPU rendering. Currently crashes on startup and forces a Docker container restart.
  # "wayland",
  # dynamic_linking should not be enabled for two reasons:
  # 1. This application uses `mold` as the linker for native builds. https://bevyengine.org/learn/book/getting-started/setup/ states "Disabling bevy/dynamic may improve the performance of this linker."
  # 2. Debugging application fails to find `libbevy_dylib.so` in `debug` because it was expecting a base16 string in the filename.
  # "dynamic_linking",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
