[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# NOTE: simulation does NOT get to depend on rendering or ui.
[dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
    "bevy_scene",
    "bevy_state"
] }
serde = { version = "1.0.197", features = ["derive"] }
bevy_turborand = { version = "0.9.0" }
bevy_save = { git = "https://github.com/perry-blueberry/bevy_save/", branch = "update-to-bevy-0.14" }
chrono = { version = "0.4.35", features = ["serde"] }
sun-times = { version = "0.2.0" }

# WASM builds require extra dependencies for logging and persisting state to local storage.
# WASM builds do not require x11 and cannot use dynamic_linking.
[target.'cfg(target_family = "wasm")'.dependencies]
brotli = { version = "6.0.0" }
gloo-storage = "0.3.0"
rmp-serde = { version = "1.1.2" }
wasm-bindgen = { version = "0.2.92" }
web-sys = { version = "0.3.67", features = [
    "EventTarget",
    "Window",
    "BeforeUnloadEvent",
] }
